# liquiddeer

./: .gitignore  CMakeLists.txt  liquiddeer.geany
source/: README.md  auth.cpp  auth.h  config.c  config.cpp  config.h  deer.c  deer.c.autosave  deer.cpp  interact.c  interact.cpp  interact.h  parse.cpp  parse.h  sync.cpp  sync.h  track.c  track.cpp  track.h  xml.cpp  xml.h
source/cmake/Modules/: FindGlib.cmake
source/gumbo/: CMakeLists.txt  attribute.c  char_ref.c
source/pugi/: CMakeLists.txt
